# Hamzstplot

./: CMakeLists.txt  Hamzstplot++Config.cmake.in  LICENSE  README.md  pushgit
Examples with Makefile/Plot 3D Helix/: Makefile
examples/: CMakeLists.txt
examples/line_plot/: CMakeLists.txt
examples/line_plot/fplot/: CMakeLists.txt  fplot_1.cpp  fplot_2.cpp
examples/line_plot/fplot3/: CMakeLists.txt  fplot3_1.cpp  fplot3_2.cpp  fplot3_3.cpp
examples/polar_plots/: CMakeLists.txt
examples/polar_plots/polarplot/: CMakeLists.txt  polarplot_1.cpp  polarplot_2.cpp  polarplot_3.cpp
source/: CMakeLists.txt
source/hamzstplot/: CMakeLists.txt  hamzstplot.h
source/hamzstplot/axes_objects/: bars.cpp  bars.h  box_chart.cpp  box_chart.h  circles.cpp  circles.h  contours.cpp  contours.h  error_bar.cpp  error_bar.h  filled_area.cpp  filled_area.h  function_line.cpp  function_line.h  histogram.cpp  histogram.h  labels.cpp  labels.h  line.cpp  line.h  matrix.cpp  matrix.h  network.cpp  network.h  parallel_lines.cpp  parallel_lines.h  stair.cpp  stair.h  string_function.cpp  string_function.h  surface.cpp  surface.h  vectors.cpp  vectors.h
source/hamzstplot/backend/: backend_interface.cpp  backend_interface.h  backend_registry.cpp  backend_registry.h  gnuplot.cpp  gnuplot.h  opengl.cpp  opengl.h  opengl_embed.cpp  opengl_embed.h
source/hamzstplot/core/: axes_object.cpp  axes_object.h  axes_type.cpp  axes_type.h  axis_type.cpp  axis_type.h  figure_registry.cpp  figure_registry.h  figure_type.cpp  figure_type.h  legend.cpp  legend.h  line_spec.cpp  line_spec.h
source/hamzstplot/detail/: config.h
source/hamzstplot/freestanding/: axes_functions.cpp  axes_functions.h  axes_lim.h  figure_functions.h  histcounts.cpp  histcounts.h  plot.h
source/hamzstplot/util/: colors.cpp  colors.h  common.cpp  common.h  concepts.h  contourc.cpp  contourc.h  geodata.h  handle_types.h  keywords.h  popen.cpp  popen.h  type_traits.h  world_cities.cpp  world_map_110m.cpp  world_map_50m.cpp
